terraform/environment/providers/aws/infra/resources/eks-adot-collector/manifest/addons-otel-permissions.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/component: controller-manager
  name: opentelemetry-operator-system
