terraform/environment/providers/aws/infra/resources/eks-adot-collector/manifest/adot-collector-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adot-collector
  namespace: observability
spec:
  type: NodePort
  selector:
    app: adot-collector-daemonset
  ports:
    - name: http
      port: 8888
      targetPort: 8888
